@startuml

title __ANIMALS's Class Diagram__\n

  namespace com.example.isp.demoispbehaviormanager {
    namespace client.animals {
      class com.example.isp.demoispbehaviormanager.client.animals.DecoyDuck {
          + DecoyDuck()
          + display()
      }
    }
  }
  

  namespace com.example.isp.demoispbehaviormanager {
    namespace client.animals {
      abstract class com.example.isp.demoispbehaviormanager.client.animals.Duck {
          {abstract} + display()
          + performFly()
          + performQuack()
          + setFlyBehavior()
          + setQuackBehavior()
          + swim()
      }
    }
  }
  

  namespace com.example.isp.demoispbehaviormanager {
    namespace client.animals {
      class com.example.isp.demoispbehaviormanager.client.animals.MallardDuck {
          + MallardDuck()
          + display()
      }
    }
  }
  

  namespace com.example.isp.demoispbehaviormanager {
    namespace client.animals {
      class com.example.isp.demoispbehaviormanager.client.animals.ModelDuck {
          + ModelDuck()
          + display()
      }
    }
  }
  

  namespace com.example.isp.demoispbehaviormanager {
    namespace client.animals {
      class com.example.isp.demoispbehaviormanager.client.animals.RedheadDuck {
          + RedheadDuck()
          + display()
      }
    }
  }
  

  namespace com.example.isp.demoispbehaviormanager {
    namespace client.animals {
      class com.example.isp.demoispbehaviormanager.client.animals.RubberDuck {
          + RubberDuck()
          + display()
      }
    }
  }
  

  com.example.isp.demoispbehaviormanager.client.animals.DecoyDuck -up-|> com.example.isp.demoispbehaviormanager.client.animals.Duck
  com.example.isp.demoispbehaviormanager.client.animals.Duck o-- com.example.isp.demoispbehaviormanager.flycomponents.FlyBehavior : flyBehavior
  com.example.isp.demoispbehaviormanager.client.animals.Duck o-- com.example.isp.demoispbehaviormanager.quackcomponents.QuackBehavior : quackBehavior
  com.example.isp.demoispbehaviormanager.client.animals.MallardDuck -up-|> com.example.isp.demoispbehaviormanager.client.animals.Duck
  com.example.isp.demoispbehaviormanager.client.animals.ModelDuck -up-|> com.example.isp.demoispbehaviormanager.client.animals.Duck
  com.example.isp.demoispbehaviormanager.client.animals.RedheadDuck -up-|> com.example.isp.demoispbehaviormanager.client.animals.Duck
  com.example.isp.demoispbehaviormanager.client.animals.RubberDuck -up-|> com.example.isp.demoispbehaviormanager.client.animals.Duck


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
